user-api/overlays/stage/khemenu.route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-khemenu-route53
spec:
    host: khemenu.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data://u1ydG69VS0Ze/YIHZ5LXJAxteH8JH0sJJ43cSsPJ02joxW0QAXfPDzTv7f5KeIm9KpAYy+lHGDWraVDS3YymdaSX/bHYN6mblW4O7uqGrkI6xnXW3N2nQc7FtCuPzTOZsfY8uVsMc5ebAgcWL/YeQ93Wm9DZAaZ/Vsg6c9O6nGRNApwDxIVdz06AjGjGCWwPjTMtBfK1cdjXjReEVatpLv9Im8SVkq0LJIaO/Zr+GZDFqwlMobPvXHWeDCaP+DcVNwD907nMz+vm3qNG/EsTlaEHlX38+JrrmCGI/X9rNFIMQWYWCo6GtaO4wKP8VPehbXokOwxPstVstLQWy2LPOBYZ0qEsRKYLyJyZzEsPJrxgW8aQe/sp/g4MMphZy02xRkvaP9l353zouHms/k+g9WeQGgXHXAmitMRPFgx9Y4okeiIurHghzqoNtoc3hQsSNVr9qMC [...]
        certificate: ENC[AES256_GCM,data:CtjUzdirfLuLvaymXZT09s368fi/EzL9jLZLWfmI5WT6nthsZANJTEu7/bSJIsW6NWAr69NHlDMC2oaf4yhkGdojT9FfumRpxybTvm8xFs0q57LTD6EvtL2gDp2ww/MhWPTS6obiN1Z5+iAs8yvcnaWP1IZB7Lk/cHOTDiFrllDUvfMHotALdhy20i/xnt31uB421Ie4mKWvbplSzLepS7pKGsgxVeoUV9mlfHlhGT6HkBlQDxL5aZfeua6dHODETP9zVR+CTAGup4Nvv0e1vaGrZfneQoJF5cA0mYA2v3abvfE/tIL82ILHpmTzRLJLkumAxuHugWHDCZNJAVdNj1iEUqsP4qN770whQpZQRyb3wiVWVMtAtBFtwBXz199ycCtrWavKAbKdwKewzeXx2FH3Xnrn0RK0cbL8dtCmO6cfvE5xq+CNEqE/gpnxOO8V2ZDnFzhfm1x [...]
        key: ENC[AES256_GCM,data:zuWv8SyfU2LlpqebNCJfU91FGcUVVTxYml3dhIvfikf5ntR6nNzu/FDJ0UBSO6LOaeIPuPxfHI8dDoPhHwE1edpZMSE0QtMaxzRmk9rMvUCJZAV4Ns+aAJj+Rghr7leFHCOBT2AVj4UTxa4eUm5x4b9xLvnqZUda2yXaaJ8pYCTUkDKXeFWKTL05S+bNPE3AZWq6gcu0Oi3o/aLU8EkOwVCsNz626TYo6KC2wzXPNt5cDZ0/fOExU19ezaFimB/WgBT3K8X1yEoZ8yC/DuGe0onvfDwxmSWSrjJYo/AdOnI6e/CmlOf5exhdtCYxXkGpzZX+0M6GjvRe4I5uCyyfVPoGzz8FB6nriGUiS8mIGlKEpMSb+93XhlU2rylGyp63c1rmfQeqnndkhuNZO+zSnOoQTu4eGglLnYxsObvjoaxP80HVw4bChWG8oEJFv9qCGKHBi/Lhhd1BPodxl2R [...]
        termination: ENC[AES256_GCM,data:Ldy0NA==,iv:37RwEItrBSn3YV97b6ohr0DMN+DEWCTxo/28IWv7WFA=,tag:tMIMHfryvbpAoW0jvzzphw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-12-13T18:01:32Z'
    mac: ENC[AES256_GCM,data:k4vwKqdEo/zmov+A5q7m0C5GyvF/09XIp4B4F9koTBUGIKHuYGPSTrZCkC5VisRgcVcAomDwbGmp71zUsPlCmyPcyJ7dM/GTfkISJCjLAWM5gTJ+/PlFhNjttvZfbalbIZmDQ0KYsnVGgdzVqciqCUTuPI9qtj1bsILDroXD5tg=,iv:NbW6C6XROkq3O1nLyGdlHBb9xnEjqeCA651zFxYv+8U=,tag:kLQhpS6QBibMcXv50HCyRw==,type:str]
    pgp:
    -   created_at: '2020-12-13T18:01:32Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//cP9VJejazQZC0ZTjIm/6ahtQwnT0/uantXLnSWIhVefe
[...]
            =nju3
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-12-13T18:01:32Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/RulCQS6L8DkYmtgzLGk5zipz3ZKRVA0ucrZjhGlC6Cva
[...]
            a/1/AHX8JQvX26l27op1hy6zYzQYopD3jsSn+do=
            =uJsM
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-12-13T18:01:32Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAg4t45adat7of6DHTHZnzujydooGV/LcHfIHhAeIeXFD+
[...]
            fdtFfTDGTiVHIJ/WcXenMebC1mjOjTrKEYh3Dzg=
            =gMzS
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
