user-api/overlays/stage/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-route53
spec:
    host: stage.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data:QTm1lypPmt4b131PHW6b5376i6g/tAl5Fd73rwZPNWqCZVi50iJ1PlrnEDei12d0BHPTv19eYBUbgZZIg0kw8zPTaGCsWEg9Ox4cWYwH75W3jhN9U3/llyUnkFav0gnD2j1AN+L64I2DABE3PyRJfJYH1ZOH7+b+z6O7p3FwPBp6vcGfKsCGjtenmH6JVpFB3VJYlAPBVZhtRqUv0nTeyK32IGNBuzgBG6i6uOakV58TO1ncrzzTM5l420M9+fKuO5T3/rtpI3upVEuap9ChdPznWVsYoNPUdfZ9tFikus4GqKD5OjNMoxxiJ9i35rnvU1aYXQ6+xHBy3QMHk6nQe4738kay1Q2IST/3Hcg99GKCXH1wK6Q95i6/yqeClxgx8zWHjnwQ9NZyWNwdPcbU32X7/IhXdMr8GBC6I9QbdP0O9Jtn5BWi/5i6YZfw3Sojn9bDtcWuh [...]
        certificate: ENC[AES256_GCM,data:JVTKT5HUylFhATQ55q4HzVposJ7LTo9z96aFw4bOXUlKJE621MgxByXnMsSQhnYzywRric9NjLxJ8kk9eARVUA1/ZscCa17rFUFQReiIZSJ0+2uTwTcY7wS6YdCbEcff3+RnFxxUDdS3Mc1n8g01oRziBV1E4aKZROZMveDITJ+Gy1OZeNYawavP2MdUz6PMcbnVoA+obCakOx6+ICORmo2F3RYJDINyGF+fAFoIdU3Ptfd0AOCmkCmG6NHC0Fss6H1VAqEmdEeZESZdcbcZInJj3dnJaFXhIu/lZFvw1IMe0VuhhygIBcBVlXn60S4pXdmhbNQ3mtQzjVpHBSjdoRVkxgDWsIo9h/uiV60swSt6nNwoywHrGQKdPlR0G911BWnYgRT+3Wd7Q4CXYzNRXa7odGAJceSBduM6VbaH05F5c1/QXggKAtRDlMd+JijejV8B0bn0EoL [...]
        key: ENC[AES256_GCM,data:7QcufK2I1Up9VLumi62HlABT582nO7qSaoskxgaKmwUnQcpLe3SUge6H5RSUrexdSeIZGSnL4c2h1W5hJ94hx1eTw3bOmECmDmyVxQGq/lexPrb/IHRQkAaDx0PLE+4wcAYpB1+JTMibTtiX5qRZfEpYXDWhVSv5jfOP/5F0ENxCrTvYyP2J7ibsZkjl8LBJPn2BVOq1IXOA3rsM1TAYI00J75NLLNrqtbQWNicPAT6pLRzD3rhwXD1sNifnGFYY9WAjcELPJ9KQsJuJQmZ6rRDBHqrHQrhy7ke9LGoLyzHkOSe5fz5LFnLXlW9XDz4UTY4qPabQdCqq7/00/lG1wD6vshtVyvc6M41KPQcaxeJ87XdGNk88Kvrc+ejmU/0epAWc9388PkZdNPCpll386z+yXmGyfPZkrCdGRphlbyxGk5RyS0nSK5tKDVFwbogkFMA4FBTo7/qSlrlFZ4b [...]
        termination: ENC[AES256_GCM,data:4l3Swg==,iv:K/iBVMXspHRzIe4lMDgBi4T2b5sZf8pn0Wa9q3X7yck=,tag:7ukdgg0m+QTNWvtYfq4WDQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-08-05T04:16:30Z'
    mac: ENC[AES256_GCM,data:r3N/j75JCfwLfieVKtsGRY1Tqh0wmwI1kqwHMWge9StEgKdH+kwQXroTDvl4iZW4DvNO0+m+0PZz6ImmmdlGBN00H0K/LJq6+nUm+YdauRtlxx+phBE7Ks/TfTDSzE4SGEKk2K4SZfopdGO35Ir4xV8vTTG7RenPYrkLp4RJJck=,iv:gEBcyR63eTcuVIVilXJtead8lHaSpwjMtYjy+pTsOW4=,tag:6nFnV+ERatt4OfNVD9xVLA==,type:str]
    pgp:
    -   created_at: '2020-08-05T04:16:30Z'
        enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYARAAtSpPXKuSs3NYJFkbV01+sSIMq/0la6W6HN2bw6UB/yJe
[...]
            fEcA
            =HLPS
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-08-05T04:16:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf+NBaTkz0Ukq+Al2GfMtL7VRtCNxlByTqAhSwV+CoHVSDj
[...]
            umBh5vs3+qCNxsTRCimyEZgBbVGEC6Hh/2uSHNTOag==
            =fRdY
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-08-05T04:16:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/XNRD6vdS/8WeJz6zRVyFPQc+5yED5igfTL0PZ4Gwqkt/
[...]
            mMHeHA2syuB0Grt3ZLU7wBu9fI2GJaUmcpQ+pURTOA==
            =Roz7
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
