user-api/overlays/stage/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: user-api-route53
spec:
  host: stage.thoth-station.ninja
  to:
    kind: Service
    name: user-api
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFajCCBFKgAwIBAgISBNJXL+IG/QyLdER4s9UXWIpwMA0GCSqGSIb3DQEBCwUA
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDj8nQ69ilFA7n/
[...]
      pdhIH6Quow34+Ss/P0im1QSwlg==
      -----END PRIVATE KEY-----
    termination: edge
